<?xml version="1.0" encoding="utf-8"?>
<!-- 
Copyright (C) 2012 Jay Kline

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<resources>
    <string name="app_name">Desk Clock</string>
    <string name="app_version">1.9</string>
    <string name="changeLogTitle">Recent Changes</string>
    <string name="changeLog">* Smooth Screensaver Mode\n* Tap Screen for temporary brightness\n* New settings\n* Donate version <a href="http://play.google.com/store/apps/details?id=com.slushpupie.deskclock.donate">available</a> in Market</string>
    <string name="ok">OK</string>
    <string name="startup_toast">Long press the screen for menu</string>
    
    <string name="settings_bg_color_confirm">Confirm</string>
    <string name="settings_default_color_confirm">Default Color</string>
    
    <string name="menu_title_prefs">Preferences</string>
    <string name="pref_title">Preferences</string>
    <string name="pref_summary">Desk Clock Preferences</string>
    
    <string name="pref_title_keep_screen_on">Keep Screen On</string>
    <string name="pref_summary_keep_screen_on">Prevent display from sleeping</string>
    <string name="pref_dialog_title_keep_screen_on">Keep Screen On</string>
    <string name="pref_default_keep_screen_on">no</string>
    <string-array name="pref_options_keep_screen_on">
        <item>Off</item>
        <item>On - auto brightness</item>
        <item>On - manual brightness</item>
    </string-array>
    <string-array name="pref_values_keep_screen_on">
        <item>no</item>
        <item>auto</item>
        <item>manual</item>
    </string-array>
    
    <string name="pref_screen_brightness">Screen Brightness</string>
    <string name="pref_summary_screen_brightness">Manually set the screen brightness</string>
    <string name="pref_summary_en_screen_brightness">Set to </string>
    <string name="pref_title_screen_brightness">Screen Brightness</string>
    <string name="pref_dialog_message_screen_brightness">Screen Brightness</string>
    <string name="pref_text_screen_brightness">&#37;</string>
    <string name="pref_default_screen_brightness">50</string>

    <string name="pref_screen_tmp_brightness">Tap Screen Brightness</string>
    <string name="pref_summary_screen_tmp_brightness">Brightness of screen when tapped</string>
    <string name="pref_summary_en_screen_tmp_brightness">Set to </string>
    <string name="pref_title_screen_tmp_brightness">Tap Screen Brightness</string>
    <string name="pref_dialog_message_screen_tmp_brightness">Tap Screen Brightness</string>
    <string name="pref_text_screen_tmp_brightness">&#37;</string>
    <string name="pref_default_screen_tmp_brightness">70</string>

    <string name="pref_button_brightness">Button Brightness</string>
    <string name="pref_summary_button_brightness">Manually set the button brightness</string>
    <string name="pref_summary_en_button_brightness">Set to </string>
    <string name="pref_title_button_brightness">Button Brightness</string>
    <string name="pref_dialog_message_button_brightness">Button Brightness</string>
    <string name="pref_text_button_brightness">&#37;</string>
    <string name="pref_default_button_brightness">50</string>
    <string name="pref_unavailable_button_brightness">Only available on Android 2.2+</string>
    
    <string name="pref_title_military_time">Use 24-hour format</string>
    <string name="pref_summary_military_time">Military time</string>
    <string name="pref_default_military_time">0</string>
    
    <string name="pref_title_leading_zero">Leading 0 on Hour</string>
    <string name="pref_summary_leading_zero">Show hour as 07 instead of 7</string>
    <string name="pref_default_leading_zero">0</string>
    
    <string name="pref_title_show_seconds">Show Seconds</string>
    <string name="pref_default_show_seconds">0</string>
    
    <string name="pref_title_blink_seconds">Blink seconds</string>
    <string name="pref_summary_blink_seconds">Blink the colon each second</string>
    <string name="pref_default_blink_seconds">0</string>
    
    <string name="pref_title_color">Font Color</string>
    <string name="pref_summary_color"></string>
    
    <string name="pref_title_background_color">Background Color</string>
    
    <string name="pref_title_font">Font</string>
    <string name="pref_summary_font">Clock Face Font</string>
    <string name="pref_dialog_title_font">Choose Font</string>
    <string name="pref_default_font">16</string>
    <string-array name="pref_options_font">
        <item>Roboto</item>
    	<item>Abduction 2000</item>
    	<item>DS Point</item>
    	<item>DS Terminal</item>
    	<item>DT 104</item>
    	<item>Delusion</item>
    	<item>Digital2</item>
    	<item>Digital Dream</item>
    	<item>Display Dots</item>
    	<item>Digi</item>
    	<item>JD Scarabeo</item>
    	<item>Stencilla</item>
    	<item>Binary</item>
    	<item>System Default</item>
    	<item>System San Serif</item>
    	<item>System Serif</item>
    	<item>System Monospace</item>
    </string-array>
    <string-array name="pref_values_font">
        <item>16</item>
		<item>4</item>
		<item>5</item>
		<item>6</item>
		<item>7</item>
		<item>8</item>
		<item>11</item>
		<item>12</item>
		<item>13</item>
		<item>14</item>
		<item>9</item>
		<item>10</item>
		<item>15</item>
		<item>0</item>	
		<item>1</item>
		<item>2</item>
		<item>3</item>
	</string-array>
    
	<string name="pref_title_screen_orientation">Screen Orientation</string>
	<string name="pref_summary_screen_orientation">Allow screen to rotate</string>
	<string name="pref_dialog_title_screen_orientation">Screen Orientation</string>
	<string name="pref_default_screen_orientation">auto</string>
	<string-array name="pref_values_screen_orientation">
         <item>auto</item>
         <item>portrait</item>
         <item>landscape</item>
     </string-array>
     <string-array name="pref_options_screen_orientation">
         <item>Auto-rotate</item>
         <item>Portrait</item>
         <item>Landscape</item>
     </string-array>
     
    <string name="pref_title_meridiem">Show AM/PM</string>
    <string name="pref_summary_meridiem"></string>
    <string name="pref_default_meridiem">0</string>
    
    <string name="pref_title_screensaver">Screen Saver</string>
    <string name="pref_summary_screensaver">Periodically move clock around the screen</string>
    <string name="pref_default_screensaver">0</string>
    
    <string name="pref_title_screensaver_speed">Screensaver Delay</string>
    <string name="pref_summary_screensaver_speed">Milliseconds between moves</string>
    <string name="pref_dialog_message_screensaver_speed">Millisecond delay</string>
    <string name="pref_text_screensaver_speed">ms</string>

    <string name="pref_title_changelog">Show Changelog</string>
    <string name="pref_summary_changelog">Display Changelog at next startup</string>

    <string name="pref_title_hints">Show popup hints</string>
    <string name="pref_summary_hints">Display popup hints at start</string>

    <string name="pref_title_scale">Scale Font</string>
    <string name="pref_summary_scale">Scaled to</string>
    <string name="pref_dialog_message_scale">Scale down the font</string>
    <string name="pref_text_scale">&#37;</string>
    
    <string name="pref_title_undock_exit">Exit on Undock</string>
    <string name="pref_summary_undock_exit"></string>
    <string name="pref_default_undock_exit">0</string>
    
</resources>
